'handlebars' changes, with stuff rom Trey

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -18,6 +18,22 @@
 
 	</li>
 
+	<li>
+	
+		<p> {{this.name}} <br>
+
+		{{this.uWords}} unique words employed <br>
+
+		words unique to artist: {{this.uToArtist}} <br>
+
+		number of songs: {{this.numSongs}} <br>
+
+		average words per song: {{this.wordsPerSong}} <br>
+
+		proportion of unique words: {{this.uWordsProp}} <br>
+
+	</li>
+
 {{/each}}
 
 </ul>
