--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -30,10 +30,10 @@ video {
 	text-decoration-color: white;
 }
 
-.btn-primary-invis {
+.invis {
   background-color: transparent;
   border-color: #ccc;
-  text-decoration-color: blue;
+  /*text-decoration-color: blue;*/
 }
 
 .whiteText {
@@ -191,5 +191,5 @@ h2 {
 }
 
 .tt-dropdown-menu {
-     background: none;
+     background-color: transparent;
 }
