changes to this branch of stuff made during tonight's class meeting,. so far...

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -132,7 +132,7 @@ h2 {
 	margin-left: -40%;
 }
 
-#rapper-search {
+#searchDiv {
 	margin: auto;
 
 }
@@ -146,6 +146,7 @@ h2 {
 	position: relative;
 	margin: 100px;
 }
+
 .typeahead, .tt-query, .tt-hint {
 	border: 2px solid #CCCCCC;
 	border-radius: 8px;
